# instant-file-finder

./: CMakeLists.txt  README.md
resources/: InstantFileFinder.rc  app.manifest
src/: AboutDialog.cpp  AboutDialog.h  App.cpp  App.h  AppMessages.h  Clipboard.cpp  Clipboard.h  DpiUtil.cpp  DpiUtil.h  DriveEnumerator.cpp  DriveEnumerator.h  FileTimeUtil.cpp  FileTimeUtil.h  FolderSizeCalculator.cpp  FolderSizeCalculator.h  FormatUtil.cpp  FormatUtil.h  Handle.h  IndexDrivesDialog.cpp  IndexDrivesDialog.h  IndexManager.cpp  IndexManager.h  IndexTypes.h  IndexedSearchWorker.cpp  IndexedSearchWorker.h  LiveSearchManager.cpp  LiveSearchManager.h  MainWindow.cpp  MainWindow.h  MetadataEnricher.cpp  MetadataEnricher.h  ModalLoop.h  NtfsUsnIndexer.cpp  NtfsUsnIndexer.h  PathReconstructor.cpp  PathReconstructor.h  PreferencesDialog.cpp  PreferencesDialog.h  QueryParser.cpp  QueryParser.h  (+20 more)
